2004-10-04  Richard Hult  <richard@imendio.com>

	* src/planner-cmd-manager.c: (cmd_manager_init),
	(cmd_manager_dump), (state_changed), (cmd_manager_free_func),
	(transaction_cmd_do), (transaction_cmd_undo),
	(planner_cmd_manager_begin_transaction),
	(planner_cmd_manager_end_transaction), (planner_cmd_new_size):
	* src/planner-cmd-manager.h:
	* src/planner-group-dialog.c: (group_cmd_default_free):
	* src/planner-project-properties.c: (property_cmd_edit):
	* src/planner-resource-view.c: (resource_cmd_remove_free),
	(resource_cmd_edit_custom_property_free): Fix bug #144734, free
	the undo data.

2004-10-04  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Move sql define to the sql plugin flags.

	* src/planner-gantt-row.c: Clean up some indentation, add missing
	undo code for dragging a task bar. Fixes bug #149359.

	* src/planner-task-tree.c: Make a bit more consistent with the
	other undo code.

2004-10-02  Richard Hult  <richard@imendio.com>

	* data/ui/main-window.ui:
	* libegg/recent-files/*: Update from latest libegg CVS and add ui
	manager view from file-roller.
	
	* src/planner-window.c: (planner_window_open_recent_cb),
	(window_populate), (window_print_cb),
	(window_recent_tooltip_func): Hook up recent files again.

2004-10-02  Alvaro del Castillo <acs@barrapunto.com>  

	* configure.in: Added support for Evolution Data Server (e-d-s)
	module

	* Makefile.am: Added support for Evolution Data Server (e-d-s)
	module

	* eds-backend: new directory with all the e-d-s code

	* eds-backend/utils: code to create the sources in Evolution for
	Planner data sources.

	* eds-backend/docs: several docs about how the backend has been
	done before reaching CVS. Also testing plans and the Changelog
	before the code hit CVS.

2004-10-01  Alvaro del Castillo <acs@barrapunto.com>  

	* configure.in: Fix bad formatting for e-d-s feature

2004-09-24  Richard Hult  <richard@imendio.com>

	* src/planner-xml-planner-plugin.c: Fix up this plugin, use a