@@ -1,3 +1,7 @@
+2004-10-04  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2004-10-04  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
